--- a/index.html
+++ b/index.html
@@ -31,6 +31,15 @@
   .tooltip { position:absolute; pointer-events:none; background:#0d1426; color:var(--text);
     border:1px solid #253052; border-radius:10px; padding:8px 10px; font-size:13px;
     box-shadow:0 6px 20px rgba(0,0,0,.35); transform:translate(-50%, -120%); white-space:nowrap; z-index:6; opacity:0; }
+
+  /* === timeseries styles (added) === */
+  .timeseries { width:100%; height:auto; display:block; }
+  .axis text { fill:#9ab; font-size:12px; }
+  .axis line, .axis path { stroke:#32456d; }
+  .ts-grid line { stroke:#1a2742; stroke-opacity:.6; }
+  .ts-legend { font-size:12px; fill:#9ab; }
+  .ts-marker { stroke:#ffffffcc; stroke-width:2; }
+  .ts-dot { stroke:#000; stroke-width:1; }
 </style>
 </head>
 <body>
@@ -65,6 +74,12 @@
       <!-- canvases injected below -->
       <div class="divider" id="divider"></div>
       <div class="handle" id="handle"></div>
+    </div>
+
+    <!-- ===== Timeseries (below the map) ===== -->
+    <div id="tsWrap" style="margin-top:16px;">
+      <h2 style="margin:0 0 8px 0; font-size:16px; font-weight:600; color:#e9eef9;">Global mean precipitation</h2>
+      <svg id="ts" class="timeseries" viewBox="0 0 1000 280" role="img" aria-label="Timeseries of precipitation"></svg>
     </div>
   </div>
 </div>
@@ -135,6 +150,23 @@
   const scenarios = Array.from(new Set(rows.map(d=>d.scenario))).sort();
   const byScenarioYear = d3.group(rows, d=>d.scenario, d=>d.year); // Map(scenario -> Map(year -> rows[]))
 
+  // ---- Build global-mean time series by scenario (for the line chart)
+  const meanByScenarioYear = d3.rollup(
+    rows,
+    v => d3.mean(v, d => d.value),
+    d => d.scenario,
+    d => d.year
+  );
+  const seriesByScenario = new Map(
+    Array.from(meanByScenarioYear, ([scen, m]) => [
+      scen,
+      Array.from(m, ([yr, mean]) => ({ year:+yr, mean:+mean }))
+        .sort((a,b)=>a.year-b.year)
+    ])
+  );
+  const allMeans = Array.from(seriesByScenario.values()).flat().map(d => d.mean);
+  const yExtentGlobal = d3.extent(allMeans);
+
   // populate selects
   selA.selectAll("option").data(scenarios).join("option").attr("value", d=>d).text(d=>d);
   selB.selectAll("option").data(scenarios).join("option").attr("value", d=>d).text(d=>d);
@@ -177,8 +209,8 @@
 
   let playing=false, timer=null, frameDelay=900;
 
-  selA.on("change", () => { labelA.text(selA.property("value")); drawBoth(currentYear()); });
-  selB.on("change", () => { labelB.text(selB.property("value")); drawBoth(currentYear()); });
+  selA.on("change", () => { labelA.text(selA.property("value")); renderLines(); drawBoth(currentYear()); });
+  selB.on("change", () => { labelB.text(selB.property("value")); renderLines(); drawBoth(currentYear()); });
   slider.on("input", updateYear);
   ptSize.on("input", () => drawBoth(currentYear()));
   ptAlpha.on("input", () => drawBoth(currentYear()));
@@ -220,10 +252,10 @@
     const yr = currentYear();
     const sideA = mx <= splitX;
     const scen = sideA ? selA.property("value") : selB.property("value");
-    const rows = (byScenarioYear.get(scen)?.get(yr)) || [];
+    const rowsYr = (byScenarioYear.get(scen)?.get(yr)) || [];
     const radius = +ptSize.node().value * 4;
     let best=null, bestD2=radius*radius;
-    for (const d of rows){
+    for (const d of rowsYr){
       const xy = projection([d.lon, d.lat]); if (!xy) continue;
       const dx = xy[0]-mx, dy=xy[1]-my, d2 = dx*dx+dy*dy;
       if (d2 < bestD2){ bestD2=d2; best={x:xy[0], y:xy[1], d}; }
@@ -273,10 +305,91 @@
   function updateYear(){
     const yr = currentYear();
     d3.select("#yearLabel").text(yr);
+    placeDots(yr);         // update line-chart marker & dots
     drawBoth(yr);
   }
 
+  // ===== Timeseries chart (added) =====
+  const tsSvg = d3.select("#ts");
+  const TS_W = 1000, TS_H = 280, M = {t:14, r:20, b:36, l:48};
+  const tsInnerW = TS_W - M.l - M.r;
+  const tsInnerH = TS_H - M.t - M.b;
+
+  const tsG = tsSvg.append("g").attr("transform", `translate(${M.l},${M.t})`);
+  const x = d3.scaleLinear().domain(d3.extent(years)).range([0, tsInnerW]);
+  const y = d3.scaleLinear().domain(yExtentGlobal).nice().range([tsInnerH, 0]);
+
+  tsG.append("g")
+    .attr("class","ts-grid")
+    .call(d3.axisLeft(y).ticks(5).tickSize(-tsInnerW).tickFormat(""))
+    .selectAll("line").attr("stroke-dasharray","2,3");
+
+  tsG.append("g").attr("class","axis").attr("transform", `translate(0,${tsInnerH})`)
+    .call(d3.axisBottom(x).ticks(6).tickFormat(d3.format("d")));
+  tsG.append("g").attr("class","axis")
+    .call(d3.axisLeft(y).ticks(5));
+
+  const lineGen = d3.line()
+    .x(d => x(d.year))
+    .y(d => y(d.mean))
+    .defined(d => Number.isFinite(d.mean));
+
+  const pathA = tsG.append("path").attr("fill","none").attr("stroke","#7aa6ff").attr("stroke-width",2);
+  const pathB = tsG.append("path").attr("fill","none").attr("stroke","#ffd37a").attr("stroke-width",2);
+
+  const dotA = tsG.append("circle").attr("r",3.5).attr("class","ts-dot").attr("fill","#7aa6ff").style("display","none");
+  const dotB = tsG.append("circle").attr("r",3.5).attr("class","ts-dot").attr("fill","#ffd37a").style("display","none");
+
+  const marker = tsG.append("line").attr("class","ts-marker")
+    .attr("y1", 0).attr("y2", tsInnerH).style("pointer-events","none");
+
+  const legend = tsG.append("g").attr("class","ts-legend").attr("transform", `translate(${tsInnerW - 180}, 0)`);
+  legend.append("circle").attr("cx",8).attr("cy",0).attr("r",4).attr("fill","#7aa6ff");
+  legend.append("text").attr("x",16).attr("y",4).text("Left scenario");
+  legend.append("circle").attr("cx",110).attr("cy",0).attr("r",4).attr("fill","#ffd37a");
+  legend.append("text").attr("x",118).attr("y",4).text("Right");
+
+  function renderLines() {
+    const scenA = selA.property("value");
+    const scenB = selB.property("value");
+    const sA = seriesByScenario.get(scenA) || [];
+    const sB = seriesByScenario.get(scenB) || [];
+    pathA.attr("d", lineGen(sA));
+    pathB.attr("d", lineGen(sB));
+    placeDots(currentYear());
+  }
+
+  function placeDots(yr) {
+    marker.attr("x1", x(yr)).attr("x2", x(yr));
+    const scenA = selA.property("value");
+    const scenB = selB.property("value");
+    const sA = seriesByScenario.get(scenA) || [];
+    const sB = seriesByScenario.get(scenB) || [];
+    const a = closestByYear(sA, yr);
+    const b = closestByYear(sB, yr);
+    if (a) { dotA.attr("cx", x(a.year)).attr("cy", y(a.mean)).style("display", null); } else { dotA.style("display","none"); }
+    if (b) { dotB.attr("cx", x(b.year)).attr("cy", y(b.mean)).style("display", null); } else { dotB.style("display","none"); }
+  }
+  function closestByYear(arr, yr) {
+    if (!arr.length) return null;
+    let best = arr[0], bd = Math.abs(arr[0].year - yr);
+    for (const p of arr) {
+      const d = Math.abs(p.year - yr);
+      if (d < bd) { bd = d; best = p; }
+    }
+    return best;
+  }
+
+  // Scrub years by moving the mouse over the chart (optional)
+  d3.select("#ts").on("mousemove", (ev) => {
+    const pt = d3.pointer(ev, tsG.node());
+    const xYear = Math.round(x.invert(pt[0]));
+    if (years.includes(xYear)) setYearIndex(years.indexOf(xYear));
+  });
+
   // initial render
+  renderLines();
+  placeDots(currentYear());
   updateYear();
 })();
 </script>
