--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
       </label>
     </div>
 
+    <svg id="legendSvg" class="legendSvg" viewBox="0 0 220 40"></svg>
+    
+    <div class="vis" id="vis">
+
     <div class="vis" id="vis">
       <div class="badge badgeA" id="labelA">Left</div>
       <div class="badge badgeB" id="labelB">Right</div>
